# modulehandbook-rag

./: .gitignore  APPLY.md  PRESENTATION_BRIEF_DE.md  README.md  RESULTS_2026-06-23.md  RUNBOOK_DE.md  app.py  dataset.md  pyproject.toml  requirements-release.txt  runBook.de.md  streamlit_app.py
deliverables/: Modulhandbuch_RAG_Finalauswertung.xlsx  Modulhandbuch_RAG_Finalpraesentation.pptx  Modulhandbuch_RAG_Sprechskript_Final.docx  Modulhandbuch_RAG_Sprechskript_Final.md  PRAESENTATIONS_HANDOFF_SALEM.md
docs/: LIVE_DEMO_RUNBOOK.md  TEST_RUNBOOK.md  evaluation.md  evaluation_results_TEMPLATE.md  final_evaluation.md  final_runbook.md  interface_design.md  modulhandbuch_quellen.md  natuerliche_sprache.md  presentation_story.md  terminal_setup.md
outputs/: RAG_Final_Result_Tables.xlsx  RAG_Project_Presentation_LMU.pptx  README.md  chunk_q1_field.txt  chunk_q1_module.txt  chunk_q1_naive.txt  chunk_q2_field.txt  chunk_q2_module.txt  chunk_q2_naive.txt  chunk_q3_field.txt  chunk_q3_module.txt  chunk_q3_naive.txt  chunk_q4_field.txt  chunk_q4_module.txt  chunk_q4_naive.txt  chunk_q5_field.txt  chunk_q5_module.txt  chunk_q5_naive.txt  eval_bachelor_bm25.txt  eval_bachelor_bm25_fieldheuristic.txt  eval_bachelor_dense.txt  eval_bachelor_hybrid.txt  eval_master_cl_bm25.txt  eval_master_cl_dense.txt  eval_master_cl_hybrid.txt  eval_master_inf_bm25.txt  eval_master_inf_dense.txt  eval_master_inf_hybrid.txt  evaluation_bm25_field_example.txt  evaluation_hybrid_multilingual_example.txt  example_informationssuche_topk.txt  example_p11_inhalte_bm25.txt  example_p11_inhalte_hybrid.txt  (+7 more)
(+77 files in other folders)
