[project]
name = "modulehandbook-rag"
version = "0.4.0"
description = "Structure-aware retrieval evaluation for university module handbooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pypdf>=5.0.0", "rank-bm25>=0.2.2", "typer>=0.12.0", "pydantic>=2.0.0", "rich>=13.0.0", "numpy>=1.24.0"]

[project.optional-dependencies]
dense = ["sentence-transformers>=3.0.0", "scikit-learn>=1.3.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
