[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modulehandbook-rag"
version = "1.0.0"
description = "Structure-aware multilingual retrieval for LMU module handbooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
  "pypdf>=5.0",
  "rank-bm25>=0.2.2",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dense = ["sentence-transformers>=3.0", "scikit-learn>=1.3"]
app = ["streamlit>=1.40"]
dev = ["pytest>=8.0"]
all = ["sentence-transformers>=3.0", "scikit-learn>=1.3", "streamlit>=1.40", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
